Prevent scroll being too long on small and medium

--- a/src/assets/custom/css/_sass/_website-navigation.scss
+++ b/src/assets/custom/css/_sass/_website-navigation.scss
@@ -75,6 +75,7 @@
     }
     &.website-navigation__menu--showing-sub-menu {
       left: -100vw;
+      overflow-y: hidden;
     }
   }
   @include large {
